[package]
name = "pokemon_gen"
version = "0.1.0"
authors = ["marsmute <marsmute@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storm = "*"
rand = "0.7"
rodio = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"